--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <main>
@@ -11,8 +13,17 @@
         <h3>David Fernando Ordoñez Piña</h3>
         <h3>Mis Proyectos</h3>
         <div class="projects">
-            <div class="project">
-                <a href="./proyecto4/index.html"></a>
+            <div class="project4">
+                <img src="./project4-img.png" alt="project 4 image">
+                <a href="./proyecto4/index.html">Proyecto 4</a>
+            </div>
+            <div class="project5">
+                <img src="./project5-img.png" alt="project 5 image">
+                <a href="./proyecto5/index.html">Proyecto 5</a>
+            </div>
+            <div class="project6">
+                <img src="./project6-img.png" alt="project 6 image">
+                <a href="./proyecto6/index.html">Proyecto 6</a>
             </div>
         </div>
     </main>
