mostly finished, styles update, couple html changes

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
         <div class="projects">
             <div class="project4">
                 <img src="./project4-img.png" alt="project 4 image">
-                <a href="./proyecto4/index.html">Proyecto 4</a>
+                <p>Proyecto 4</p>
+                <a href="./proyecto4/index.html">Quién soy?</a>
             </div>
             <div class="project5">
                 <img src="./project5-img.png" alt="project 5 image">
-                <a href="./proyecto5/index.html">Proyecto 5</a>
+                <p>Proyecto 5</p>
+                <a href="./proyecto5/index.html">About Me</a>
             </div>
             <div class="project6">
                 <img src="./project6-img.png" alt="project 6 image">
-                <a href="./proyecto6/index.html">Proyecto 6</a>
+                <p>Proyecto 6</p>
+                <a href="./proyecto6/index.html">DotBike e-commerce</a>
             </div>
         </div>
     </main>
