links modified due to issues with the routing

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <div class="project4">
                 <img src="./project4-img.png" alt="project 4 image">
                 <p>Proyecto 4</p>
-                <a href="./proyecto4/index.html">Quién soy?</a>
+                <a href="https://proyecto4-ten.vercel.app">Quién soy?</a>
             </div>
             <div class="project5">
                 <img src="./project5-img.png" alt="project 5 image">
                 <p>Proyecto 5</p>
-                <a href="./proyecto5/index.html">About Me</a>
+                <a href="proyecto5-nine.vercel.app">About Me</a>
             </div>
             <div class="project6">
                 <img src="./project6-img.png" alt="project 6 image">
                 <p>Proyecto 6</p>
-                <a href="./proyecto6/index.html">DotBike e-commerce</a>
+                <a href="https://proyecto6-olive.vercel.app">DotBike e-commerce</a>
             </div>
         </div>
     </main>
