--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="project5">
                 <img src="./project5-img.png" alt="project 5 image">
                 <p>Proyecto 5</p>
-                <a href="proyecto5-nine.vercel.app">About Me</a>
+                <a href="https://proyecto5-nine.vercel.app">About Me</a>
             </div>
             <div class="project6">
                 <img src="./project6-img.png" alt="project 6 image">
