--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <img src="./project6-img.png" alt="project 6 image">
                 <a href="./proyecto6/index.html">DotBike e-commerce</a>
             </div>
+            <div class="project7">
+                <p>Proyecto 7</p>
+                <img src="./project7-img.png" alt="project 7 image">
+                <a href="./proyecto7/index.html">Calculadora Básica</a>
+            </div>
         </div>
     </main>
 </body>
