--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <img src="./project7-img.png" alt="project 7 image">
                 <a href="./proyecto7/index.html">Calculadora Básica</a>
             </div>
+            <div class="project8">
+                <p>Proyecto 8</p>
+                <img src="./project8-img.png" alt="project 8 image">
+                <a href="./proyecto8/index.html">Sitios Turísticos</a>
+            </div>
         </div>
     </main>
 </body>
