perfección tamaño imagenes y subido el proyecto 9 aplicación reservas restaurante

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                 <img src="./project8-img.png" alt="project 8 image">
                 <a href="./proyecto8/index.html">Sitios Turísticos</a>
             </div>
+            <div class="project9">
+                <p>Proyecto 9</p>
+                <img src="./project9-img.png" alt="project 9 image">
+                <a href="./proyecto9/index.html">Aplicación Reservas</a>
+            </div>
         </div>
     </main>
 </body>
